--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ async-copy-progress = "1.0.1"
 clap = {version="4.3.3", features=["derive"]}
 pancurses = "0.17.0"
 async-channel = "1.8.0"
+futures-util = "0.3.28"
